[gd_scene load_steps=11 format=3 uid="uid://6psj7rrjbwen"]

[ext_resource type="Script" uid="uid://birr8fj3natu4" path="res://Scripts/Interface/main_menu.gd" id="1_x7gjw"]
[ext_resource type="Texture2D" uid="uid://bgunvkwtjqr71" path="res://Assets/TitleScreenBackground.png" id="2_x7gjw"]
[ext_resource type="FontFile" uid="uid://d14hss2wymye0" path="res://Assets/alagard.ttf" id="3_ihmx1"]
[ext_resource type="AudioStream" uid="uid://dxuxkbdsblnrj" path="res://Assets/sons/MenuSelect.wav" id="4_ihmx1"]
[ext_resource type="AudioStream" uid="uid://chsltn5gc4yff" path="res://Assets/sons/TitleScreen.mp3" id="4_lpc36"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lpc36"]
texture = ExtResource("2_x7gjw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.9057694, 0.90576947, 0.90576935, 0.7254902)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.599199, 0.599199, 0.5991988, 0.7254902)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -3.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7gjw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lpc36")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = 11.0
offset_right = 224.72144
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.113152, 1.8242304)
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_ihmx1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_ihmx1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Quit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = -248.0
offset_right = 472.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/shadow_offset_x = 15
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_ihmx1")
theme_override_font_sizes/font_size = 150
text = "Blind Love"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lpc36")
autoplay = true

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ihmx1")
volume_db = -16.0

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
